Update ShapeCollection.java